StopProxy
Implemented StopProxy class that implements StopInterface and
communicates with Stops class to determine which stops have been loaded.